# tetris

./: CMakeLists.txt  Compilation.md  README.md  build_sh  tetris  tetris.cpp  tetris3.cpp
assets/: previewGameplay.webm
include/: Logo.h  Pixeboy_ttf.h  board.h  globals.h  ltexture.h  ltimer.h  piece.h  tPieceIcon.h  tetris_utils.h
src/: board.cpp  globals.cpp  ltexture.cpp  ltimer.cpp  main.cpp  tetris_utils.cpp
